config ssh auth key using GnuPG cont.

--- a/_posts/2020-07-12-GnuPG.md
+++ b/_posts/2020-07-12-GnuPG.md
@@ -3,15 +3,15 @@ title: GnuPG配置用于SSH的RSA密钥
 tag: ssh gpg pgp
 ---
 
-为了避免每次远程ssh连接的时候输入用户名和密码，我们会用ssh-keygen生成的RSA公私密钥对来自动化ssh登陆认证的过程。GnuPG可以生成和管理密钥，于是我就想把用于ssh连接的RSA密钥也托管给它。这样以来，所有日常工作用到的密钥都由GnuPG集中统一管理，同时也方便备份。这篇文章完整介绍如何用GnuPG配置一个可以用于ssh登陆认证的RSA密钥，以及配置过程中需要注意的那些坑。
+为了避免每次远程ssh连接的时候输入用户名和密码，我们会用ssh-keygen生成的RSA公私密钥对来自动化ssh登陆认证的过程。GnuPG可以生成和管理密钥，于是我就想把用于ssh登陆的RSA密钥也托管给它。这样以来，所有日常工作用到的密钥都由GnuPG集中统一管理，同时也方便了备份。这篇文章完整介绍如何用GnuPG配置一个可以用于ssh登陆认证的RSA密钥，以及配置过程中需要注意的那些坑。
 
-首先，当我们讨论PGP密钥的时候，很多时候指的是一组密钥，而不是一个密钥。PGP密钥分为主密钥和子密钥，通常的配置方式是一个主密钥外加多个子密钥，每个子密钥被分配不同功能，且都用主密钥签过名。这样做的好处是可以最大程度保护主密钥，因为几乎所有日常操作都通过子密钥完成，主密钥的私钥可以离线保存。另外如果某个子密钥的安全性受到破坏的时候，我们可以很方便地用主密钥撤销子密钥，同时主密钥的信任度不受影响。关于PGP子密钥，非常推荐花时间读下[Using OpenPGP subkeys in Debian development](https://wiki.debian.org/Subkeys)这篇文章，里面介绍了子密钥概念以及配置PGP密钥的最佳实践。
+当我们讨论PGP密钥的时候，很多时候指的是一组密钥，而不是一个密钥。PGP密钥分为主密钥和子密钥，通常的配置方式是一个主密钥外加多个子密钥，每个子密钥被分配不同功能，且都用主密钥签过名。这样做的好处是可以最大程度保护主密钥，因为几乎所有日常操作都通过子密钥完成，主密钥的私钥可以离线保存。另外如果某个子密钥被破坏了，我们可以很方便地用主密钥去撤销该子密钥，同时主密钥的信任度不受影响。关于PGP子密钥，非常推荐花时间读下[Using OpenPGP subkeys in Debian development](https://wiki.debian.org/Subkeys)这篇文章，里面介绍了子密钥概念以及配置PGP密钥的最佳实践。
 
-我的开发环境是MacOS 10.15.5 + gpg (GnuPG) 2.2.21，配置开始之前我们假设还没有任何PGP密钥。
+我的开发环境是MacOS 10.15.5 + gpg (GnuPG) 2.2.21，配置开始之前假设还没有任何PGP密钥。
 
-我们可以简单运行`gpg --gen-key`来生成一组新密钥，gpg会默认生成一个开启了Sign和Certify功能的主密钥以及一个Encrypt功能的子密钥（这里说的“一个”指一个公私密钥对）。为了了解所有细节，我们使用专家模式手动配置所有参数。
+我们可以简单运行`gpg --gen-key`来生成一组新密钥，gpg会默认生成一个开启了Sign和Certify功能的主密钥以及一个Encrypt功能的子密钥（这里说的“一个”指一个公私密钥对）。为了了解所有细节，我们进入专家模式手动配置所有参数。
 
-1）先建一个只有Certify功能的主密钥。这里需要注意Certify和Sign的区别，Certify指的是给其它密钥签名，其它密钥可以是自己创建的子密钥或者别人的主密钥；Sign指的是给数据签名。
+1）先建一个只有Certify功能的主密钥。
 
 ```shell
 $ gpg --expert --full-gen-key
@@ -86,9 +86,9 @@ Comment:
 Change (N)ame, (C)omment, (E)mail or (O)kay/(Q)uit? O
 ```
 
-gpg会自动在~/.gnupg目录下为我们生成撤销证书，可以用于撤销主密钥。
+Certify和Sign的区别在于，Certify是给其它密钥签名，其它密钥可以是自己的其它子密钥或者他人的主密钥；Sign指的是给数据签名。生成主密钥后，gpg会自动在~/.gnupg/openpgp-revocs.d目录下为我们创建用于撤销主密钥的证书。
 
-2）用刚才创建的主密钥生成一个只有Authenticate功能的子密钥
+2）用刚创建的主密钥生成一个只有Authenticate功能的子密钥
 
 ```shell
 $ gpg --list-keys --keyid-format long                                                                                        
@@ -181,23 +181,23 @@ Really create? (y/N) y
 gpg> save
 ```
 
-编辑密钥的时候需要提供主密钥的id，id可以通过运行`gpg --list-keys --keyid-format long`找到。这里有几个关于id的概念：short id，long id，fingerprint，keygrip。[Stackflow上的最高票回答](https://security.stackexchange.com/questions/84280/short-openpgp-key-ids-are-insecure-how-to-configure-gnupg-to-use-long-key-ids-i)详细解释了前三者的区别，这里补充一下keygrip，之后配置的时候需要用到。keygrip可以理解成某个密钥的内部id，比如gpg-agent就是通过keygrip来唯一标识密钥的。但是在运行gpg命令的时候，我们只会用到密钥的外部id（short id，long id或者keygrip）。默认情况下keygrip是不显示的，需要用`--with-keygrip`来开启。
+编辑密钥的时候需要提供主密钥的ID，密钥ID可以通过运行`gpg --list-keys --keyid-format long`找到。这里有几个关于密钥ID的概念：Short Key ID，Long Key ID，Fingerprint以及Keygrip。[Stackflow上的最高票回答](https://security.stackexchange.com/questions/84280/short-openpgp-key-ids-are-insecure-how-to-configure-gnupg-to-use-long-key-ids-i)详细解释了前三者的区别，这里补充一下Keygrip，待会需要用到。Keygrip是密钥的内部id，比如gpg-agent就是通过Keygrip来唯一标识密钥的。但是在运行gpg命令的时候，我们是通过Short Key ID，Long Key ID或者Fingerprint这些外部ID来指定目标密钥的。默认情况下gpg只显示主密钥的Fingerprint，`--keyid-format long`开启所有主子密钥Long Key ID的显示。
 
-3）为gpg-agent开启ssh
+3）为gpg-agent开启ssh支持
 
 ```shell
 $ echo 'enable-ssh-support' >> ~/.gnupg/gpg-agent.conf
 ```
 
-4) 让gpg-agent介入ssh认证
+4）让gpg-agent介入ssh登陆认证
 
 ```shell
 $ echo 'export SSH_AUTH_SOCK=$(gpgconf --list-dirs agent-ssh-socket)' >> ~/.bashrc
 ```
 
-这样gpg-agent可以通过socket和ssh-agent沟通。
+这样以来gpg-agent可以通过socket和ssh-agent交换信息。
 
-5）配置需要使用的RSA密钥
+5）指定ssh登陆所使用的RSA密钥
 
 ```shell
 $ gpg --list-secret-keys --with-keygrip
@@ -213,20 +213,20 @@ ssb   rsa4096 2020-07-12 [A]
 $ echo 'A3D71EEA4B5297F4D066AFAAD0AF4A61D6850C9A' > ~/.gnupg/sshcontrol
 ```
 
-将刚才生成的用来Authenticate的私钥的keygrip写入sshcontrol文件，这样不用每次都手动去指定密钥id。注意这里写入sshcontrol的是密钥的keygrip而不是fingerprint。
+将步骤2）中生成的Authenticate子密钥的Keygrip写入sshcontrol文件，这样不用每次都手动去指定使用哪个密钥来登陆。注意这里写入文件的是子密钥的Keygrip而不是Fingerprint。
 
-6）重启gpg-agent
+6）打开新shell，重启gpg-agent
 
 ```shell
 $ gpgconf --kill gpg-agent
 $ gpg-agent --daemon
 ```
 
-到此GnuPG部分的配置就完成了。
+至此GnuPG部分的配置就完成了。
 
-7）远端配置公钥
+7）远端配置RSA公钥
 
-上面所有步骤完成后运行`ssh-add -L`可以看到所使用的RSA公钥，但是这个公钥不能直接复制粘贴到远端的authorized_keys中。这里我们手动从GnuPG中导出符合ssh格式的公钥。
+上面所有步骤完成后运行`ssh-add -L`可以看到登陆所使用的RSA公钥，但是这个公钥不能直接复制粘贴到远端的authorized_keys中，这里我们需要手动从gpg中导出符合OpenSSH格式的公钥（对比`ssh-add -L`和export的结果发现公钥数据只是备注有区别，这里不大明白为什么前者不行）。
 
 ```shell
 $ gpg --list-keys --keyid-format long
@@ -240,15 +240,15 @@ sub   rsa4096/54FD729941AC0B0A 2020-07-12 [A]
 $ gpg --export-ssh-key 54FD729941AC0B0A | ssh -i ~/.ssh/id_rsa username@host '>> ~/.ssh/authorized_keys'
 ```
 
-其中54FD729941AC0B0A是刚才生成的具有Authenticate功能的子密钥的long id。
+其中54FD729941AC0B0A是步骤2）生成的Authenticate子密钥的Long ID。
 
-大功告成，以后ssh连接远端服务器的时候会透明地使用GnuPG管理的私钥，测试没问题的话可以放心把原来ssh-keygen生成的密钥对删除。
+大功告成，以后ssh登陆远端服务器的时候会透明地使用gpg管理的私钥，测试没问题的话可以放心把原来ssh-keygen生成的密钥对删除。
 
 -----
 
-如果只对如何用GnuPG配置用于ssh连接的密钥对感兴趣，可以忽略本文之后部分。下面是关于如何管理和使用密钥的最佳实践。
+如果只关心如何用GnuPG配置用于ssh连接的密钥，可以忽略本文之后部分。下面是关于如何用GnuPG管理和使用密钥的最佳实践。
 
-我们之前只创建了用于Authenticate的子密钥，实际使用中还需要另外两个子密钥，分别用于Encrypt和Sign。具体创建过程类似上文中的第二步，在此不再赘述。最终的keyring包括一个用于Certify的主密钥和三个分管Authenticate、Encrypt和Sign的子密钥。keyring配置完成后，我们分别导出所有私钥和公钥作为备份离线存储。
+我们目前只创建了用于Authenticate的子密钥，实际使用中一般还需要另外两个子密钥，分别用于Encrypt和Sign。具体创建过程类似上文步骤2），在此不再赘述。最终完整的Keyring包括一个用于Certify的主密钥和三个分管Authenticate、Encrypt和Sign的子密钥。配置完成后，我们分别导出私钥和公钥进行备份。
 
 ```shell
 $ gpg --export-secret-keys --armor 0291021E5F56BD92 > key.ssb
@@ -256,4 +256,69 @@ $ gpg --export-secret-keys --armor 0291021E5F56BD92 > key.ssb
 $ gpg --export --armor 0291021E5F56BD92 > key.sub
 ```
 
-以后万一需要恢复的时候运行`gpg --import keyfile`就可以重新导入。
+以后需要恢复的时候运行`gpg --import keyfile`即可重新导入密钥。为了提高主密钥私钥的安全性，我们可以将它离线存储然后彻底从本地删除，毕竟平时几乎不会用到它。
+
+```shell
+$ shred --remove ~/.gnupg/private-keys-v1.d/AC85B97781F550C9EB3C124F81A50FAD8BEDE215.key
+
+$ gpg --list-secret-keys --with-keygrip
+/Users/xxxxxxxxxx/.gnupg/pubring.kbx
+------------------------------------
+sec#  rsa4096 2020-07-12 [C]
+      B782E151823E6A19A756C55A0291021E5F56BD92
+      Keygrip = AC85B97781F550C9EB3C124F81A50FAD8BEDE215
+uid           [ultimate] yyyyyyyyyy
+ssb   rsa4096 2020-07-12 [E]
+      Keygrip = EE8ABF2C0543C0C60E55A43727342B32BD15C7F4
+ssb   rsa4096 2020-07-12 [S]
+      Keygrip = 315EF4524B8EA2DD1C8A1E7DFA179FC6A77829E8
+ssb   rsa4096 2020-07-12 [A]
+      Keygrip = A3D71EEA4B5297F4D066AFAAD0AF4A61D6850C9A
+```
+
+文件名中的hex字符串是主密钥的Keygrip。主密钥的私钥从本地删除后，可以发现sec后面多出了一个‘#’符号，表示已经删除了。
+
+接下来我们需要把主密钥的公钥分享出去，这样方便对方验证我们的签名或者向我们发送加密数据。除了线下交换公钥之外，我们还可以把公钥发布到服务器上。
+
+```shell
+$ gpg —send-keys B782E151823E6A19A756C55A0291021E5F56BD92
+gpg: sending key 0291021E5F56BD92 to hkps://hkps.pool.sks-keyservers.net
+
+$ gpg —search-keys B782E151823E6A19A756C55A0291021E5F56BD92
+gpg: data source:  [https://209.244.105.201:443](https://209.244.105.201/)
+(1)     xxxxxxxxxx(mailto:yyyyyyyyyy)
+          4096 bit RSA key 0291021E5F56BD92, created: 2020-07-12
+Keys 1-1 of 1 for “B782E151823E6A19A756C55A0291021E5F56BD92”.  Enter number(s), N)ext, or Q)uit
+```
+
+公钥发布之后任何人都可以运行`gpg --recv-keys keyid`来导入我们的公钥。要注意的是公钥服务器遍布全球各地，相互间同步数据延迟特别大，所以如果对方在我们上传公钥后立马导入，gpg极有可能报错说找不到数据。这时候要么我们耐心等待同步完成，要么重新发布密钥通过`--keyserver`选项指定服务器IP，对方再从同一服务器下载我们的公钥。
+
+导入公钥后，对方可以用它来检查签名：
+
+```shell
+# Alice: sign the data
+$ gpg --sign file
+
+# Bob: verify the signature of Alice
+$ gpg --verify file.gpg
+```
+
+这里我们签名的时候并没有显式指定用哪个私钥。当有多个Sign功能的密钥的时候，gpg会默认优先选择最近创建的那个。
+
+对方也可以给我们发送加密数据：
+
+```shell
+# Alice: encrypt the data
+$ echo 'hello, world!' > greetings
+$ gpg -r bob@email.com --encrypt greetings
+
+# Bob: decrypt the data
+$ gpg --decrypt greetings.gpg
+gpg: encrypted with 4096-bit RSA key, ID 8A0F1E53243E8B63, created 2020-07-12
+...
+hello, world!
+```
+
+另外，我们可以很方便地配置Git使得所有commit都附带自己的签名。GitHub也支持账户绑定PGP密钥，签过名的commit页面上会多出一个verified的绿色标签。
+
+这样一来，无论是给commit签名，加密解密数据还是远程ssh登陆，所有的密钥都由GnuPG集中管理，方便很多。
